--- a/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
+++ b/MacDown/Localization/Base.lproj/MPHtmlPreferencesViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
@@ -16,11 +17,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="405" height="189"/>
+            <rect key="frame" x="0.0" y="0.0" width="405" height="217"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0ez-nk-c3q">
-                    <rect key="frame" x="18" y="151" width="87" height="17"/>
+                    <rect key="frame" x="18" y="179" width="87" height="17"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="CSS:" id="9I3-I7-HLu">
                         <font key="font" metaFont="system"/>
@@ -29,7 +30,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Wgm-Sy-7mr">
-                    <rect key="frame" x="109" y="146" width="157" height="26"/>
+                    <rect key="frame" x="109" y="174" width="157" height="26"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="DYB-rZ-iFG" id="9Mg-zg-Kvi">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -47,7 +48,7 @@
                     </connections>
                 </popUpButton>
                 <segmentedControl horizontalHuggingPriority="300" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IJe-cc-YKn">
-                    <rect key="frame" x="269" y="147" width="118" height="24"/>
+                    <rect key="frame" x="269" y="175" width="118" height="24"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <segmentedCell key="cell" alignment="left" style="rounded" trackingMode="momentary" id="0rH-I9-Dxr">
                         <font key="font" metaFont="smallSystem"/>
@@ -84,7 +85,7 @@
                     </connections>
                 </pathControl>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="5mI-gS-xH9">
-                    <rect key="frame" x="109" y="65" width="278" height="18"/>
+                    <rect key="frame" x="109" y="93" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Enable TeX-like math syntax" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="6vg-3f-KWk">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -95,7 +96,7 @@
                     </connections>
                 </button>
                 <button translatesAutoresizingMaskIntoConstraints="NO" id="Zna-RM-nBO">
-                    <rect key="frame" x="109" y="113" width="278" height="18"/>
+                    <rect key="frame" x="109" y="141" width="278" height="18"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <buttonCell key="cell" type="check" title="Enable highlighting in code blocks" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="BuQ-02-oQB">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -106,7 +107,7 @@
                     </connections>
                 </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HzY-ws-XRq">
-                    <rect key="frame" x="127" y="45" width="260" height="14"/>
+                    <rect key="frame" x="127" y="53" width="260" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Math support requires Internet connection." id="5Ch-dG-juL">
                         <font key="font" metaFont="smallSystem"/>
@@ -115,7 +116,7 @@
                     </textFieldCell>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2I4-c8-jan">
-                    <rect key="frame" x="186" y="86" width="202" height="22"/>
+                    <rect key="frame" x="186" y="114" width="202" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" controlSize="small" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="dvX-w7-kuE">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -128,7 +129,7 @@
                     </connections>
                 </popUpButton>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dd4-T9-cLi">
-                    <rect key="frame" x="127" y="91" width="56" height="14"/>
+                    <rect key="frame" x="127" y="119" width="56" height="14"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="52" id="Trd-jx-pmE"/>
@@ -139,25 +140,39 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="u5h-MS-cR3">
+                    <rect key="frame" x="126" y="72" width="261" height="18"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <buttonCell key="cell" type="check" title="Use dollar sign ($) as inline delimiter" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="GF9-Dm-IoB">
+                        <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
+                        <font key="font" metaFont="smallSystem"/>
+                    </buttonCell>
+                    <connections>
+                        <binding destination="-2" name="enabled" keyPath="self.preferences.htmlMathJax" id="g8D-bh-dNR"/>
+                        <binding destination="-2" name="value" keyPath="self.preferences.htmlMathJaxInlineDollar" id="wa6-Ue-wPT"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" id="4VK-KY-tAn"/>
                 <constraint firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" constant="20" id="60U-Ld-RXh"/>
-                <constraint firstItem="HzY-ws-XRq" firstAttribute="top" secondItem="5mI-gS-xH9" secondAttribute="bottom" constant="8" id="9Eb-e2-l6K"/>
+                <constraint firstItem="u5h-MS-cR3" firstAttribute="top" secondItem="5mI-gS-xH9" secondAttribute="bottom" constant="8" id="9Ba-Ui-HgP"/>
+                <constraint firstItem="5mI-gS-xH9" firstAttribute="trailing" secondItem="u5h-MS-cR3" secondAttribute="trailing" id="AWd-pf-VlH"/>
                 <constraint firstAttribute="bottom" secondItem="f62-wu-Z6p" secondAttribute="bottom" constant="20" id="Br9-WO-eJN"/>
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="top" secondItem="2I4-c8-jan" secondAttribute="bottom" constant="8" id="CLN-3m-mst"/>
                 <constraint firstItem="Zna-RM-nBO" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" id="Hne-bE-ZOU"/>
-                <constraint firstItem="HzY-ws-XRq" firstAttribute="leading" secondItem="5mI-gS-xH9" secondAttribute="leading" constant="18" id="J7K-pW-c9s"/>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="top" secondItem="Zna-RM-nBO" secondAttribute="bottom" constant="8" id="JCt-zH-DPb"/>
                 <constraint firstItem="Dd4-T9-cLi" firstAttribute="leading" secondItem="Zna-RM-nBO" secondAttribute="leading" constant="18" id="KRr-S2-xD0"/>
                 <constraint firstAttribute="trailing" secondItem="5mI-gS-xH9" secondAttribute="trailing" constant="20" id="Mfw-kE-xOv"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="Wgm-Sy-7mr" secondAttribute="centerY" id="Nqd-iB-6u0"/>
+                <constraint firstItem="5mI-gS-xH9" firstAttribute="leading" secondItem="u5h-MS-cR3" secondAttribute="leading" constant="-18" id="PgX-B9-drW"/>
                 <constraint firstItem="Wgm-Sy-7mr" firstAttribute="leading" secondItem="0ez-nk-c3q" secondAttribute="trailing" constant="8" id="QTk-vu-G2t"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="centerY" secondItem="IJe-cc-YKn" secondAttribute="centerY" id="QaR-mb-oSA"/>
                 <constraint firstAttribute="trailing" secondItem="Zna-RM-nBO" secondAttribute="trailing" constant="20" id="TF6-pi-1W8"/>
                 <constraint firstItem="2I4-c8-jan" firstAttribute="leading" secondItem="Dd4-T9-cLi" secondAttribute="trailing" constant="8" id="VJE-4h-EJh"/>
+                <constraint firstItem="HzY-ws-XRq" firstAttribute="leading" secondItem="u5h-MS-cR3" secondAttribute="leading" id="WBp-Mu-Yo2"/>
+                <constraint firstItem="5mI-gS-xH9" firstAttribute="trailing" secondItem="HzY-ws-XRq" secondAttribute="trailing" id="b8l-9Z-msw"/>
                 <constraint firstItem="bih-Hu-dSj" firstAttribute="trailing" secondItem="IJe-cc-YKn" secondAttribute="trailing" id="buC-1V-Gum"/>
-                <constraint firstAttribute="trailing" secondItem="HzY-ws-XRq" secondAttribute="trailing" constant="20" id="c5f-U2-0Oc"/>
                 <constraint firstItem="Dd4-T9-cLi" firstAttribute="centerY" secondItem="2I4-c8-jan" secondAttribute="centerY" id="f5U-Fh-Sc1"/>
                 <constraint firstItem="f62-wu-Z6p" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="fLJ-1K-5pq"/>
                 <constraint firstItem="bih-Hu-dSj" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="leading" id="fwV-Xc-Enc"/>
@@ -169,6 +184,7 @@
                 <constraint firstItem="5mI-gS-xH9" firstAttribute="leading" secondItem="Wgm-Sy-7mr" secondAttribute="leading" id="rd0-o3-nQU"/>
                 <constraint firstAttribute="bottom" secondItem="bih-Hu-dSj" secondAttribute="bottom" constant="20" id="t0q-58-ThI"/>
                 <constraint firstItem="0ez-nk-c3q" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="ucH-qv-lLz"/>
+                <constraint firstItem="HzY-ws-XRq" firstAttribute="top" secondItem="u5h-MS-cR3" secondAttribute="bottom" constant="8" id="xuL-FG-B7V"/>
             </constraints>
         </customView>
         <userDefaultsController representsSharedInstance="YES" id="QE5-Wu-kC2"/>
