--- a/MacDown/Localization/Base.lproj/MainMenu.xib
+++ b/MacDown/Localization/Base.lproj/MainMenu.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1080" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
     <objects>
@@ -610,7 +611,11 @@ DQ
             </items>
         </menu>
         <customObject id="eq0-c4-vgQ" customClass="MPMainController"/>
-        <customObject id="Zfp-OK-9bN" customClass="SUUpdater"/>
+        <customObject id="Zfp-OK-9bN" customClass="SUUpdater">
+            <connections>
+                <outlet property="delegate" destination="eq0-c4-vgQ" id="UJV-6a-eCL"/>
+            </connections>
+        </customObject>
         <userDefaultsController representsSharedInstance="YES" id="ow1-Qr-nTV"/>
     </objects>
 </document>
